--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^0.14.3",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "redux-promise": "^0.5.3",
