--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^0.14.3",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^0.14.3",
+    "react-redux": "^5.0.6",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
     "react-router-dom": "^4.2.2",
